--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "formidable": "~1.0.15",
     "qs": "~2.2.3",
     "unirest": "~0.2.7"
+  },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/ZeuJS/Apollo.git"
   }
 }
